2006-04-22  Jesse van den Kieboom  <jesse@icecrew.nl>
	
	Fixed bug #339396 - Snippets plugin could support GEDIT_CURRENT_WORD 
	variable expansion
	
	* plugins/snippets/snippets/SnippetController.py:
	* plugins/snippets/snippets/functions.py:
	
	Added the GEDIT_CURRENT_WORD variable and implemented the removal of 
	the current word from the buffer prior to the insertion of the 
	snippet	when the variable is used
	
2006-04-22  Jesse van den Kieboom  <jesse@icecrew.nl>

	Fixed bug #339398 - Bottom panel: size changes when resizing window, 
	size is not properly restored after restart
	
	* gedit/gedit-window.c: pack the main notebook in the paned with
	stretch = TRUE so the bottom panel size doesn't change when resizing
	the paned
	
2006-04-22  Jesse van den Kieboom  <jesse@icecrew.nl>
	
	Fixed bug #339397 - Accelerator snippets don't work when gedit is just 
	started
	
	* plugins/snippets/snippets/SnippetController.py:
	* plugins/snippets/snippets/functions.py:
	* plugins/snippets/snippets/SnippetsDialog.py:
	
	Loads the snippets when the a valid accelerator is activated in a 
	buffer while the snippets library wasn't yet loaded
	
2006-04-22  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/SnippetController.py: fix wrong index
	caused by the addition of an extra mark

2006-04-22  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/data/latex.xml: fixed the 
	'Wrap Selection in Command' snippet
	* plugins/snippets/snippets/SnippetsDialog.py: enable F1/F12 
	accelerators
	* plugins/snippets/snippets/SnippetController.py: use gtk.keysyms 
	instead of gtk.gdk.keyval_from_name
	
2006-04-22  Jesse van den Kieboom  <jesse@icecrew.nl>

	* snippets/Snippet.py: enabled shell and python placeholders. Added 
	python placeholder align function (can be used by python placeholders 
	to align/tabelize text). Cleaned the parsing code. Added an extra mark 
	on snippet insertion which is positioned at the end of the snippet