@@ -1,3 +1,7 @@
+2006-04-24  Steve Frécinaux  <steve@istique.net>
+
+	* gedit/gedit-plugin-manager.c: sort the plugin list alphabetically.
+
 2006-04-22  Jesse van den Kieboom  <jesse@icecrew.nl>
 	
 	Fixed bug #339396 - Snippets plugin could support GEDIT_CURRENT_WORD 
